[project]
name = "hackrx-bajaj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.11.0.post1",
    "fastapi>=0.116.1",
    "genai>=2.1.0",
    "google-genai>=1.28.0",
    "google-generativeai>=0.8.5",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "pdfplumber>=0.11.7",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.0.0",
    "textract==1.5",
    "uvicorn>=0.35.0",
]
